# home_repair

./: .gitignore  Cargo.toml  justfile  package.json  schema.graphql
.cargo/: config.toml
.local/: README.md
.sh/: start_backend_local_dev.sh
account_service/db/: Cargo.toml
account_service/db/migrations/2025-09-14-080237_xtea_encrypt/: up.sql
account_service/db/migrations/2025-09-14-081143_customer_and_handyman_sign_up/: down.sql  up.sql
account_service/db/src/: account_safety.rs  lib.rs  schema.rs
account_service/db/src/customer/: account.rs  mod.rs  profile.rs
account_service/db/src/handyman/: account.rs  profile.rs
account_service/main/: Cargo.toml
account_service/main/src/: lib.rs
account_service/server/: Cargo.toml
account_service/server/src/: lib.rs  load_customer.rs  load_handyman.rs  server.rs  sign_up_and_auth.rs
common/argon2_hash/: Cargo.toml
common/argon2_hash/src/: lib.rs
common/db_utils/: Cargo.toml  test
common/db_utils/src/: constants.rs  lib.rs  migration.rs  sql_function.rs  tsquery.rs  utils.rs
common/db_utils/src/pagination/: offset.rs
common/environment/: Cargo.toml
common/environment/src/: lib.rs
common/error/: Cargo.toml  build.rs
common/error/proto/: error_details.proto
common/error/src/: error.rs  error_details.rs  lib.rs  macros.rs
common/error/src/conversion/: argon2.rs  async_graphql.rs  axum.rs  diesel.rs  jsonwebtoken.rs  mod.rs  prost.rs  std_io.rs  tokio.rs  tonic.rs
common/hex_converter/: Cargo.toml
common/hex_converter/src/: lib.rs
common/jwt_signer/: Cargo.toml
common/jwt_signer/src/: lib.rs
common/logging/: Cargo.toml
common/logging/src/: local.rs
common/paging/: Cargo.toml
common/paging/src/: lib.rs
common/random_util/: Cargo.toml
common/random_util/src/: lib.rs
common/service_http/: Cargo.toml
common/service_http/src/: lib.rs
common/sms_sender/: Cargo.toml
common/sms_sender/src/: lib.rs  sms_sender_trait.rs  terminal_sms_sender.rs  test_sms_sender.rs  zalo_sender.rs
common/typesafe/: Cargo.toml
common/typesafe/src/: lib.rs
core_service/db/: Cargo.toml
core_service/db/src/: customer_task_request.rs  handymand_expertise.rs  lib.rs  (+4 more)
core_service/graphql/context/: Cargo.toml
core_service/graphql/context/src/: config.rs  http_effect.rs  lib.rs
core_service/graphql/context/src/request_context/: context.rs  mod.rs  session_handler.rs
core_service/graphql/loader/: Cargo.toml
core_service/graphql/loader/src/: common.rs  lib.rs
core_service/graphql/loader/src/account/: mod.rs
core_service/graphql/loader/src/customer/: customer_account_by_id.rs  customer_profile_by_account_id.rs  mod.rs
core_service/graphql/loader/src/handyman/: handyman_account_by_id.rs  handyman_profile_by_account_id.rs  mod.rs
core_service/graphql/loader/tests/: test_loader.rs
core_service/graphql/mutation/: Cargo.toml
core_service/graphql/mutation/src/: customer_create_task.rs  foo_mutation.rs  lib.rs  mutation.rs  oboarding_handyman.rs  signup_and_auth.rs
core_service/graphql/query/: Cargo.toml
core_service/graphql/query/src/: foo_query.rs  general_purpose_query.rs  handyman_discovery.rs  lib.rs  query.rs  service.rs  session.rs
core_service/graphql/types/: Cargo.toml
core_service/graphql/types/src/: account.rs  customer.rs  customer_profile.rs  foo_bar_node.rs  generic_type.rs  handyman.rs  handyman_expertise.rs  handyman_profile.rs  handyman_service.rs  lib.rs  schedule.rs  service.rs  session.rs
core_service/graphql/types/src/node/: cached_node.rs  global_id.rs  graphql_node.rs  mod.rs
core_service/main/: Cargo.toml
core_service/main/config/: Config.dhall  Cookie.dhall  Environment.dhall  Features.dhall  Local.dhall
core_service/main/src/: gen_schema.rs  main.rs
core_service/server/: Cargo.toml
core_service/server/src/: config_types.rs  create_context.rs  extract_session.rs  graphql_schema.rs  health_check.rs  lib.rs  server.rs  tracing_span.rs
core_service/server/tests/: account_registration.rs
core_service/server/tests/graphql/: account_registration.graphql  account_registration.rs  assert_response_error.rs  client.rs  mod.rs  session.graphql  session.rs
customer_app/: Cargo.toml  tauri.conf.json
customer_app/src/: main.rs
data_type/actor_auth/: Cargo.toml  actor_auth.proto  build.rs
data_type/actor_auth/src/: lib.rs
data_type/entity_type/: Cargo.toml  build.rs  test.rs
data_type/entity_type/proto/: account.proto
data_type/entity_type/src/: access_guard_id.rs  account.rs  entity_ids.rs  lib.rs  macros.rs  schedule.rs  service.rs  time.rs
data_type/jwt_auth/: Cargo.toml
data_type/proto_builder/: Cargo.toml
docker/: docker-compose.yaml
docker/postgres/: docker-compose.yaml  pg-init.sql
handyman_app/: Cargo.toml  tauri.conf.json
handyman_app/src/: main.rs
search_service/db/: Cargo.toml  diesel.toml
search_service/db/migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
search_service/db/migrations/2025-10-07-170521_handyman_search/: down.sql  up.sql
search_service/db/src/: handyman.rs  lib.rs  schema.patch  schema.rs
search_service/main/: Cargo.toml
search_service/server/: Cargo.toml
search_service/server/src/: handyman.rs  lib.rs  server.rs
share_service_schema/: .env  Cargo.toml
share_service_schema/migrations/2025-09-14-080237_xtea_encrypt/: down.sql
share_service_schema/migrations/2025-09-14-081143_customer_and_handyman_sign_up/: up.sql
share_service_schema/migrations/2025-10-05-085536_handyman_profile_expertise/: up.sql
share_service_schema/src/: lib.rs  schema.patch  schema.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
test_service_orchestration/: Cargo.toml
test_service_orchestration/src/: lib.rs  orchestration.rs
test_service_orchestration/src/services/: account_service.rs  core_service.rs  mod.rs  search_service.rs  service_database.rs
test_utils/: Cargo.toml
test_utils/src/: lib.rs  register_port.rs
test_utils/src/services/: container_tags.rs  mod.rs  postgis.rs  postgres.rs
www/: .prettierignore  eslint.config.mts  package.json  prettierrc.js
(+16 files in other folders)
