# Rust virtual workspace. See <https://doc.rust-lang.org/cargo/reference/workspaces.html#virtual-workspace>
[workspace]

resolver = "2"

members = [
  "common/*",
  "customer_app",
  "handyman_app",
  "share_service_schema",
]

[workspace.dependencies]
tauri = "2"
tauri-plugin-opener = "2"
serde = "1.0.219"
serde_json = "1.0.143"
diesel = "2.2.12"
diesel-async = "0.6.1"
diesel_migrations = "2.2.0"
diesel-derive-enum = "2.1.0"
diesel-derive-newtype = "2.1.2"
argon2 = "0.5.3"
regex = "1.11.2"
percent-encoding = "2.3.2"
prost = "0.14.1"
prost-types = "0.14.1"
tokio = "1.47.1"
tonic = "0.14.2"
backtrace = "0.3.75"
tracing = "0.1.41"
tracing-error = "0.2.1"
axum = "0.8.4"
async-graphql = "7.0.17"
indexmap = "2.11.1"
jsonwebtoken = "9.3.1"
chrono = "0.4.42"
rand = "0.9.2"

# Build dependencies
tauri-build = "2"
prost-build = "0.14.1"

# Internal dependencies
argon2_hash = { path = "common/argon2_hash" }
db_utils = { path = "common/db_utils" }
error = { path = "common/error" }
jwt_signer = { path = "common/jwt_signer" }
paging = { path = "common/paging" }
random_util = { path = "common/random_util" }
service_http = { path = "common/service_http" }
customer_app = { path = "customer_app" }
handyman_app = { path = "handyman_app" }
share_service_schema = { path = "share_service_schema" }

# Pin versions in workspace, propagate and unify to member packages
[workspace.package]
version = "0.1.0"
rust-version = "1.88.0"
edition = "2024"
