# Rust virtual workspace. See <https://doc.rust-lang.org/cargo/reference/workspaces.html#virtual-workspace>
[workspace]

resolver = "2"

members = [
  "common/*",
  "data_type/*",
  "share_service_schema",
  "account_service/db",
  "account_service/server",
  "core_service/graphql/*",
  "core_service/server",
  "core_service/main",
  "test_utils",
  "test_service_orchestration",
]

[workspace.dependencies]
serde = "1.0.219"
serde_json = "1.0.143"
diesel = "2.2.12"
diesel-async = "0.6.1"
diesel_migrations = "2.2.0"
diesel-derive-enum = "2.1.0"
diesel-derive-newtype = "2.1.2"
argon2 = "0.5.3"
regex = "1.11.2"
percent-encoding = "2.3.2"
prost = "0.14.1"
prost-types = "0.14.1"
tokio = "1.47.1"
tonic = "0.14.2"
backtrace = "0.3.75"
tracing = "0.1.41"
tracing-error = "0.2.1"
axum = "0.8.4"
async-graphql = "7.0.17"
indexmap = "2.11.1"
jsonwebtoken = "9.3.1"
chrono = "0.4.42"
rand = "0.9.2"
email_address = "0.2.9"
phonenumber = "0.3.7"
scoped-futures = "0.1.4"
cookie = "0.18.1"
http = "1.3.1"
headers = "0.4.1"
tower = "0.5.2"
tower-http = "0.6.6"
async-graphql-axum = "7.0.17"
paste = "1.0.15"
base64 = "0.22.1"
bincode = "2.0.1"
reqwest = "0.12.23"
clap = "4.5.48"
serde_dhall = "0.13.0"
moka = "0.12.10"
uuid = "1.18.1"
async-trait = "0.1.89"
tracing-subscriber = "0.3.20"

# Build dependencies
tonic-prost-build = "0.14.2"

# Test dependencies
testcontainers-modules = "0.13.0"
graphql_client = "0.14.0"

# Internal dependencies
argon2_hash = { path = "common/argon2_hash" }
hex_converter = { path = "common/hex_converter" }
typesafe = { path = "common/typesafe" }
db_utils = { path = "common/db_utils" }
error = { path = "common/error" }
jwt_signer = { path = "common/jwt_signer" }
paging = { path = "common/paging" }
random_util = { path = "common/random_util" }
service_http = { path = "common/service_http" }
environment = { path = "common/environment" }
sms_sender = { path = "common/sms_sender" }
logging = { path = "common/logging" }

actor_auth = { path = "data_type/actor_auth" }
entity_type = { path = "data_type/entity_type" }
proto_builder = { path = "data_type/proto_builder" }

share_service_schema = { path = "share_service_schema" }

account_service_db = { path = "account_service/db" }
account_service_server = { path = "account_service/server" }

core_service_graphql_context = { path = "core_service/graphql/context" }
core_service_graphql_loader = { path = "core_service/graphql/loader" }
core_service_graphql_types = { path = "core_service/graphql/types" }
core_service_graphql_mutation = { path = "core_service/graphql/mutation" }
core_service_graphql_query = { path = "core_service/graphql/query" }
core_service_server = { path = "core_service/server" }
core_service_main = { path = "core_service/main" }

test_utils = { path = "test_utils" }
test_service_orchestration = { path = "test_service_orchestration" }

# Pin versions in workspace, propagate and unify to member packages
[workspace.package]
version = "0.1.0"
rust-version = "1.88.0"
edition = "2024"
