[package]
name = "customer_app"
description = "Home repair app for customer"
edition.workspace = true
version.workspace = true
rust-version.workspace = true

[build-dependencies]
tauri-build = { workspace = true, features = [] }

[dependencies]
tauri = { workspace = true, features = [] }
tauri-plugin-opener.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

[[bin]]
name = "customer_app_main"
path = "src/main.rs"
