[package]
name = "customer_app"
description = "Home repair app for customer"
edition.workspace = true
version.workspace = true
rust-version.workspace = true

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "customer_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { workspace = true, features = [] }

[dependencies]
tauri = { workspace = true, features = [] }
tauri-plugin-opener.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
