[package]
name = "handyman_app"
description = "Home repair app for handyman"
edition.workspace = true
version.workspace = true
rust-version.workspace = true

[lib]
# handyman_app uses the strategy different from Tauri defaul (which is used in customer_app),
# that change main binary to `handyman_app_main` to distinguish lib and main binary names.
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "handyman_app_main"
path = "src/main.rs"

[build-dependencies]
tauri-build = { workspace = true, features = [] }

[dependencies]
tauri = { workspace = true, features = [] }
tauri-plugin-opener.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
