[package]
name = "test_service_orchestration"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

[features]
account_service = []
search_service = []
core_service = [
    "account_service",
    "search_service",
]

[dependencies]
tokio.workspace = true
testcontainers-modules.workspace = true
diesel.workspace = true
diesel-async = { workspace = true, features = ["postgres"] }
cookie.workspace = true
moka = { workspace = true, features = ["future"] }

# Internal dependencies
error.workspace = true
test_utils.workspace = true
db_utils.workspace = true
jwt_signer.workspace = true
random_util.workspace = true
sms_sender.workspace = true
account_service_db.workspace = true
account_service_server.workspace = true
search_service_db.workspace = true
search_service_server.workspace = true
core_service_db.workspace = true
core_service_graphql_context.workspace = true
core_service_server.workspace = true
