[package]
name = "test_utils"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
testcontainers.workspace = true
testcontainers-modules = { workspace = true, features = ["postgres", "localstack", "redis"] }
uuid = { workspace = true, features = ["v7"] }
diesel_migrations = { workspace = true, features = ["postgres"] }

# Internal dependencies
error.workspace = true
db_utils.workspace = true
