[package]
name = "core_service_server"
edition = "2024"
version.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
cookie.workspace = true
headers.workspace = true
tokio.workspace = true
axum = { workspace = true, features = ["ws"] }
tower.workspace = true
tower-http = { workspace = true, features = ["cors", "trace"] }
async-graphql.workspace = true
async-graphql-axum.workspace = true
moka = { workspace = true, features = ["future"] }

# Internal dependencies
actor_auth.workspace = true
error.workspace = true
db_utils.workspace = true
entity_type.workspace = true
service_http.workspace = true
sms_sender.workspace = true
account_service_server.workspace = true
core_service_graphql_context.workspace = true
core_service_graphql_loader.workspace = true
core_service_graphql_query.workspace = true
core_service_graphql_mutation.workspace = true
core_service_graphql_types.workspace = true

[dev-dependencies]
sms_sender = { workspace = true, features = ["test"] }
test_service_orchestration = { workspace = true, features = ["core_service"] }
chrono.workspace = true
reqwest = { workspace = true, features = ["json"] }
graphql_client.workspace = true

