[package]
name = "core_service_graphql_context"
edition = "2024"
version.workspace = true
rust-version.workspace = true

[dependencies]
tokio = { workspace = true, features = ["sync"] }
serde.workspace = true
cookie.workspace = true
async-graphql.workspace = true
http.workspace = true
moka = { workspace = true, features = ["future"] }

# Internal dependencies
random_util.workspace = true
entity_type.workspace = true
actor_auth.workspace = true
error.workspace = true
db_utils.workspace = true
hex_converter.workspace = true
service_http.workspace = true
account_service_server.workspace = true
core_service_graphql_loader.workspace = true
