[package]
name = "core_service_graphql_query"
edition = "2024"
version.workspace = true
rust-version.workspace = true

[dependencies]
async-graphql.workspace = true
strum.workspace = true
tracing.workspace = true
scoped-futures.workspace = true

# Internal dependencies
paging = { workspace = true, features= ["graphql"] }
db_utils.workspace = true
error.workspace = true
entity_type.workspace = true
search_service_db.workspace = true
search_service_server.workspace = true
core_service_db.workspace = true
core_service_graphql_context.workspace = true
core_service_graphql_types.workspace = true
