[package]
name = "core_service_graphql_types"
edition = "2024"
version.workspace = true
rust-version.workspace = true

[dependencies]
async-graphql = { workspace = true, features = ["chrono"] }
tokio.workspace = true
bincode.workspace = true
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
tracing.workspace = true
chrono.workspace = true
scoped-futures.workspace = true

# Yearnings internal deps
actor_auth.workspace = true
db_utils.workspace = true
error.workspace = true
entity_type = { workspace = true, features = ["graphql"] }
account_service_db.workspace = true
account_service_server.workspace = true
core_service_db.workspace = true
core_service_graphql_context.workspace = true
